# scientific-calculator

e_commerce/: main.py  pyproject.toml  requirements.txt
e_commerce/apps/: crud.py  database.py  models.py  schema.py
sakar/: .pre-commit-config.yaml  README.md  README.rst  calc.py  learn.py  main.py  newcal.py  newcalc.py  pyproject.toml  science.py
sakar/tests/: test_sakar.py
