[tool.poetry]
name = "e_commerce"
version = "0.1.0"
description = ""
authors = ["sakar <nisakar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
apps = "^0.0.0-alpha.20200918"
authentication = "^1.1.0"
starlette = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
